# gofer-rewrite

./: Cargo.toml  TODO.md  build.rs
example_pipelines/full/: Cargo.toml
example_pipelines/full/src/: main.rs
gofer/: Cargo.toml
gofer/src/api/: mod.rs
gofer/src/cli/: mod.rs  pipeline.rs
gofer/src/cli/pipeline/: create.rs  get.rs  mod.rs  run.rs
gofer/src/conf/: api.rs  cli.rs  default_api_config.toml  default_cli_config.toml
gofer/src/models/: mod.rs  namespace.rs  pipeline.rs  run.rs  task.rs
gofer/src/scheduler/: docker.rs  mod.rs
gofer/src/storage/: mod.rs  pipelines.rs  runs.rs  task_runs.rs  tests.rs
gofer/src/storage/migrations/: 0_init.sql
gofer_proto/src/: gofer.proto  gofer_message.proto  gofer_transport.proto  proto.rs
gofer_sdk/: Cargo.toml
gofer_sdk/rust/: Cargo.toml
gofer_sdk/src/: config.rs  lib.rs  pipeline.rs  task.rs
libs/gofer_sdk/: Cargo.toml
libs/gofer_sdk/src/: lib.rs  pipeline.rs  task.rs
libs/proto/: Cargo.toml  build.rs
src/: main.rs
src/api/: mod.rs  service.rs
src/cli/: mod.rs  namespace.rs  pipeline.rs  service.rs
src/conf/: api.rs  cli.rs  default_api_config.toml  mod.rs
src/frontend/: package-lock.json
src/frontend/public/: index.html
src/models/: mod.rs  namespace.rs  pipeline.rs  pipeline_config.rs  run.rs  task.rs
src/proto/: from.rs  gofer.proto  gofer_message.proto  gofer_transport.proto  mod.rs  proto.rs
src/storage/: mod.rs  namespaces.rs  pipelines.rs
src/storage/migrations/: 0_init.sql
