[package]
name = "gofer-rewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.4"
tinytemplate = "1.2.1"
lazy-regex = "2.3.0"
tokio-rustls = "0.23"
rustls-pemfile = "1.0.0"
axum-server = { version = "0.4.0", features = ["tls-rustls"] }
clap = { version = "3.1.8", features = ["derive"] }
config = "0.13.0"
prost = "0.10.0"
rust-embed = "6.3.0"                                                        # We embed the configuration files and frontend
mime_guess = "2.0.4"
futures = "0.3.21"
tower = "0.4.12"
hyper = "0.14.18"
serde = "1.0.137"
slog = "2.7.0"
url = "2.2.2"
slog-scope = "4.4.0"
sloggers = "2.1.1"
tonic-reflection = "0.4.0"
webpki-roots = "0.22.3"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.7.1", features = ["tls", "transport", "tls-roots"] }
thiserror = "1.0.31"
comfy-table = "5.0.1"
chrono = "0.4.19"
chrono-humanize = "0.2.1"
colored = "2.0.0"

[build-dependencies]
tonic-build = "0.7.0"
